force-app/main/default/objects/Realisation__c/Realisation__c.object-meta.xml
<CustomObject>
    <label>Réalisation</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Realisation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réalisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>