force-app/main/default/objects/Realisation__c/fields/Ecrat__c.field-meta.xml
<CustomField>
    <fullName>Ecrat__c</fullName>
    <formula>Total_N__c - Total_N_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ecrat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>