force-app/main/default/objects/Realisation__c/fields/LOGISTIQUE_N_1__c.field-meta.xml
<CustomField>
    <fullName>LOGISTIQUE_N_1__c</fullName>
    <label>Logistique N-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>