force-app/main/default/objects/Realisation__c/fields/LOGISTIQUE_N__c.field-meta.xml
<CustomField>
    <fullName>LOGISTIQUE_N__c</fullName>
    <label>Logistique N</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>