force-app/main/default/objects/Realisation__c/fields/Objectif__c.field-meta.xml
<CustomField>
    <fullName>Objectif__c</fullName>
    <label>Objectif</label>
    <referenceTo>Objectif__c</referenceTo>
    <relationshipLabel>Réalisations</relationshipLabel>
    <relationshipName>Realisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>