force-app/main/default/objects/Realisation__c/fields/Total_N_1__c.field-meta.xml
<CustomField>
    <fullName>Total_N_1__c</fullName>
    <formula>LOGISTIQUE_N_1__c +  Transport_NAT_N_1__c +  Transport_INT_N_1__c +  Transit_N_1__c +  MAGASINAGE_N_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total N-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>