force-app/main/default/objects/Realisation__c/fields/Total_N__c.field-meta.xml
<CustomField>
    <fullName>Total_N__c</fullName>
    <formula>LOGISTIQUE_N__c +  Transport_NAT_N__c +  Transport_INT_N__c +  Transit_N__c +  MAGASINAGE_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total N</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>