force-app/main/default/objects/Realisation__c/fields/Transit_N__c.field-meta.xml
<CustomField>
    <fullName>Transit_N__c</fullName>
    <label>Transit N</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>