force-app/main/default/objects/Realisation__c/fields/Transport_INT_N_1__c.field-meta.xml
<CustomField>
    <fullName>Transport_INT_N_1__c</fullName>
    <label>Transport INT N-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>