force-app/main/default/objects/Realisation__c/fields/Type_dobjectif__c.field-meta.xml
<CustomField>
    <fullName>Type_dobjectif__c</fullName>
    <label>Type d&apos;objectif</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
                <label>Revenu</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>