force-app/main/default/objects/Realisation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Commercial__c</columns>
    <columns>Client__c</columns>
    <columns>Type_dobjectif__c</columns>
    <columns>NAME</columns>
    <columns>Objectif__c</columns>
    <columns>Ecrat__c</columns>
    <columns>Date__c</columns>
    <columns>Transit_N__c</columns>
    <columns>Transit_N_1__c</columns>
    <columns>Transport_INT_N__c</columns>
    <columns>Transport_INT_N_1__c</columns>
    <columns>MAGASINAGE_N__c</columns>
    <columns>MAGASINAGE_N_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>